# embassy-fdcan-mvp

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
