[package]
name = "fdcan-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.3.1", git = "https://github.com/MaxiluxSystems/embassy.git", branch = "feature/fdcan", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", git = "https://github.com/MaxiluxSystems/embassy.git", branch = "feature/fdcan", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-sync = { version = "0.4.0", git = "https://github.com/MaxiluxSystems/embassy.git", branch = "feature/fdcan", features = ["defmt"] }
embassy-stm32 = { version = "0.1.0", git = "https://github.com/MaxiluxSystems/embassy.git", branch = "feature/fdcan", features = ["nightly", "defmt", "stm32h750xb", "memory-x", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
embedded-io-async = { version = "0.6.0" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = "0.8.0"
static_cell = "2.0.0"

[patch."https://github.com/embassy-rs/stm32-data-generated"]
stm32-metapac = { path = "../stm32-data/build/stm32-metapac" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
